--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,11 @@ spring:
   redis:
     database: ${SPRING_REDIS_DATABASE:3}
     # Redis服务器地址
-    host: ${SPRING_REDIS_HOST:192.168.100.90}
+    host: ${SPRING_REDIS_HOST:172.17.6.85}
     # Redis服务器连接端口
-    port: ${SPRING_REDIS_PORT:6379}
+    port: ${SPRING_REDIS_PORT:6479}
     # Redis服务器连接密码（默认为空）
-    password: ${SPRING_REDIS_PASSWORD:123}
+    #password: ${SPRING_REDIS_PASSWORD:123}
     # 连接池最大连接数（使用负值表示没有限制）
     jedis:
       pool:
@@ -30,6 +30,6 @@ info:
 service:
   datasource:
     driver-class-name: ${SERVICE-DATABASE-DRIVER:org.postgresql.Driver}
-    url: ${SERVICE-DATABASE-URL:jdbc:postgresql://172.17.6.168:5432/test}
+    url: ${SERVICE-DATABASE-URL:jdbc:postgresql://172.17.6.84:5432/test}
     username: ${SERVICE-DATABASE-USERNAME:postgres}
     password: ${SERVICE-DATABASE-PASSWORD:pgcet123Cet}
