--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,28 +5,37 @@ spring:
   application:
     name: redists
     # Redis数据库索引（默认为0）
+  # 连接池最大连接数（使用负值表示没有限制）
+  jedis:
+    pool:
+      max-active: 200
+      # 连接池最大阻塞等待时间（使用负值表示没有限制）
+      #        max-wait: -1
+      # 连接池中的最大空闲连接
+      max-idle: 10
+      # 连接池中的最小空闲连接
+      min-idle: 0
+  # 连接超时时间（毫秒）
+  timeout: 10000
   redis:
-    database: ${SPRING_REDIS_DATABASE:3}
+    ####redis单例配置#####################
+    #database: ${SPRING_REDIS_DATABASE:3}
     # Redis服务器地址
-    host: ${SPRING_REDIS_HOST:172.17.6.85}
+    #host: ${SPRING_REDIS_HOST:172.17.6.85}
     # Redis服务器连接端口
-    port: ${SPRING_REDIS_PORT:6479}
+    #port: ${SPRING_REDIS_PORT:6479}
     # Redis服务器连接密码（默认为空）
     #password: ${SPRING_REDIS_PASSWORD:123}
-    # 连接池最大连接数（使用负值表示没有限制）
-    jedis:
-      pool:
-        max-active: 200
-        # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        #        max-wait: -1
-        # 连接池中的最大空闲连接
-        max-idle: 10
-        # 连接池中的最小空闲连接
-        min-idle: 0
-    # 连接超时时间（毫秒）
-    timeout: 10000
+    ####redis主从哨兵模式配置#####################
+    sentinel:
+      #主机名称
+      master: mymaster
+      #哨兵节点
+      nodes: 172.17.6.85:26479,172.17.6.85:26480,172.17.6.85:26480 # 哨兵的IP:Port列表
+
 info:
   version: @version@
+
 service:
   datasource:
     driver-class-name: ${SERVICE-DATABASE-DRIVER:org.postgresql.Driver}
